--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     document.getElementById('randomString').textContent = randomString;
   }
 
-  // Update random string initially
-  updateRandomString();
-
-  // Update random string every 1 minute (60000 milliseconds)
-  setInterval(updateRandomString, 1);
+  // Update random string initially and start the interval
+  document.addEventListener('DOMContentLoaded', function() {
+    updateRandomString(); // Initial update
+    setInterval(updateRandomString, 1); // Update every 1 minute (60000 milliseconds)
+  });
 </script>
 </head>
 <body>
