--- a/index.html
+++ b/index.html
@@ -3,35 +3,35 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Fixed Random String Generator</title>
+<title>Updating Random String Generator</title>
 <script>
-  // Function to generate a fixed random alphanumeric string
-  function generateFixedRandomString(length) {
-    const seed = 12345; // Seed value for consistency
+  // Function to generate a random alphanumeric string of given length
+  function generateRandomString(length) {
     const charset = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
     let result = '';
     for (let i = 0; i < length; i++) {
-      // Use a predictable randomization based on the seed
-      const randomIndex = (seed + i) % charset.length;
+      const randomIndex = Math.floor(Math.random() * charset.length);
       result += charset.charAt(randomIndex);
     }
     return result;
   }
 
-  // Function to update the <p> element with the fixed random string
+  // Function to update the <p> element with a new random string
   function updateRandomString() {
-    const randomString = generateFixedRandomString(10); // Length 10 as specified
+    const randomString = generateRandomString(10); // Length 10 as specified
     document.getElementById('randomString').textContent = randomString;
   }
 
-  // Update random string initially and start the interval
+  // Update random string initially on page load
   document.addEventListener('DOMContentLoaded', function() {
     updateRandomString(); // Initial update
-    // No need for setInterval as the string is fixed, it doesn't change over time
+    // Set interval to update random string every 10 seconds (10000 milliseconds)
+    setInterval(updateRandomString, 10000);
   });
 </script>
 </head>
 <body>
-  <p id="randomString">Fixed Random String</p>
+  <p id="randomString">Updating Random String</p>
 </body>
 </html>
+
