--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
         }
 
         // Update text initially and then every 10 seconds
-        updateText();
-        setInterval(updateText, 10000); // 10000 milliseconds = 10 seconds
+        updateText(); // Initial update
+
+        setInterval(updateText, 10000); // Update every 10 seconds
     </script>
 </body>
 </html>
+
